# qak

./: .gitignore  README
src/: CMakeLists.txt  build  build_cycle  clean_cmake  clean_cmake-clang  cycle_build  zz-build-config
src/include/qak/: abs.hxx  alignof.hxx  atomic.hxx  bitsizeof.hxx  config.hxx  fail.hxx  hash.hxx  host_info.hxx  io.hxx  is_memcpyable.hxx  macros.hxx  min_max.hxx  mutex.hxx  now.hxx  optional.hxx  permutation.hxx  prng64.hxx  rotate_sequence.hxx  rotate_sequence_vector.hxx  rptr.hxx  static_data.hxx  stopwatch.hxx  test_app_post.hxx  test_app_pre.hxx  test_macros.hxx  thread.hxx  thread_group.hxx  threadls.hxx  ucs.hxx  vector.hxx
src/include/qak/imp/: pthread.hxx
src/include/qak/io/: io.hxx
src/include/qak/workarounds/: alignof_operator.hxx
src/libqak/: CMakeLists.txt  atomic.cxx  atomic__test.cxx  bitsizeof__test.cxx  fail__test.cxx  hash__test.cxx  host_info.cxx  host_info__test.cxx  min_max__test.cxx  mutex.cxx  mutex__test.cxx  now.cxx  now__test.cxx  optional__test.cxx  permutation.cxx  permutation__test.cxx  prng64__test.cxx  rotate_sequence.cxx  rotate_sequence__test.cxx  rptr.cxx  rptr__test.cxx  static_data.cxx  stopwatch.cxx  stopwatch__test.cxx  test_app__test.cxx  thread.cxx  thread__test.cxx  thread_group.cxx  thread_group__test.cxx  threadls.cxx  ucs.cxx  ucs__test.cxx  vector__test.cxx
src/libqak/io/: io.cxx
src/toolchains/msvs/2013/: debug.props  dll.props  exe.props  lib.props  qak.sln  root.props  target-machine-x64.props  target-machine-x86.props  test-exe.props  test_all.cmd  use-libqak.props  vc2013_cxx11_workarounds.hxx
src/toolchains/msvs/2013/libqak/: libqak.vcxproj  libqak.vcxproj.filters
src/toolchains/msvs/2013/libqak_atomic_test/: libqak_atomic_test.vcxproj
src/toolchains/msvs/2013/libqak_bitsizeof_test/: libqak_bitsizeof_test.vcxproj
src/toolchains/msvs/2013/libqak_fail_test/: libqak_fail_test.vcxproj
src/toolchains/msvs/2013/libqak_hash_test/: libqak_hash_test.vcxproj
src/toolchains/msvs/2013/libqak_host_info_test/: libqak_host_info_test.vcxproj
src/toolchains/msvs/2013/libqak_min_max_test/: libqak_min_max_test.vcxproj
src/toolchains/msvs/2013/libqak_mutex_test/: libqak_mutex_test.vcxproj
src/toolchains/msvs/2013/libqak_now_test/: libqak_now_test.vcxproj
src/toolchains/msvs/2013/libqak_optional_test/: libqak_optional_test.vcxproj
src/toolchains/msvs/2013/libqak_permutation_test/: libqak_permutation_test.vcxproj
src/toolchains/msvs/2013/libqak_rotate_sequence_test/: libqak_rotate_sequence_test.vcxproj
src/toolchains/msvs/2013/libqak_rptr_test/: libqak_rptr_test.vcxproj
src/toolchains/msvs/2013/libqak_stopwatch_test/: libqak_stopwatch_test.vcxproj
src/toolchains/msvs/2013/libqak_test_vector/: libqak_test_vector.vcxproj
src/toolchains/msvs/2013/libqak_thread_group_test/: libqak_thread_group_test.vcxproj  libqak_thread_group_test.vcxproj~
src/toolchains/msvs/2013/libqak_thread_test/: libqak_thread_test.vcxproj
src/toolchains/qtcreator/qak/: qak.pro
src/toolchains/qtcreator/qak/atomic__test/: atomic__test.pro
src/toolchains/qtcreator/qak/bitsizeof__test/: bitsizeof__test.pro
src/toolchains/qtcreator/qak/fail__test/: fail__test.pro
src/toolchains/qtcreator/qak/hash__test/: hash__test.pro
src/toolchains/qtcreator/qak/host_info__test/: host_info__test.pro
src/toolchains/qtcreator/qak/min_max__test/: min_max__test.pro
src/toolchains/qtcreator/qak/mutex__test/: mutex__test.pro
src/toolchains/qtcreator/qak/now__test/: now__test.pro
src/toolchains/qtcreator/qak/optional__test/: optional__test.pro
src/toolchains/qtcreator/qak/permutation__test/: permutation__test.pro
src/toolchains/qtcreator/qak/prng64__test/: prng64__test.pro
src/toolchains/qtcreator/qak/qak/: qak.pro
src/toolchains/qtcreator/qak/rotate_sequence__test/: rotate_sequence__test.pro
src/toolchains/qtcreator/qak/rptr__test/: rptr__test.pro
src/toolchains/qtcreator/qak/stopwatch__test/: stopwatch__test.pro
src/toolchains/qtcreator/qak/test_app__test/: test_app__test.pro
src/toolchains/qtcreator/qak/thread__test/: thread__test.pro
src/toolchains/qtcreator/qak/thread_group__test/: thread_group__test.pro
src/toolchains/qtcreator/qak/ucs__test/: ucs__test.pro
src/toolchains/qtcreator/qak/vector__test/: vector__test.pro
